# Sentinel-Red-OSINT

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
scanners/: email_scanner.py  phone_scanner.py  social_scanner.py
scripts/: interactive.sh
