[project]
name = "sentinelgraph"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus Braum",email = "mtbraum@gmail.coms"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.1 || >3.14.1,<4.0"
dependencies = [
    "aiohttp>=3.13.3,<4.0.0",
    "pyvis>=0.3.2,<0.4.0",
    "networkx>=3.6.1,<4.0.0",
    "requests (>=2.32.5,<3.0.0)",
    "sherlock-project (>=0.16.0,<0.17.0)",
    "holehe (>=1.61,<2.0)",
    "phonenumbers (>=9.0.21,<10.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
